[package]
name = "pleme-blx"
version = "0.2.0"
edition = "2024"
rust-version = "1.89.0"
description = "Blackmatter shell extensions — config-driven zsh generation + Rust CLI utilities"
license = "MIT"
authors = ["Pleme Team <team@pleme.io>"]
repository = "https://github.com/pleme-io/blx"
homepage = "https://github.com/pleme-io/blx"
keywords = ["shell", "cli", "utilities", "rust", "blackmatter"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["module/", "target/", "result-*", "Cargo.nix", "flake.nix", "flake.lock"]

[[bin]]
name = "blx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
colored = "2.1"
dirs = "6.0"
base64 = "0.22"
urlencoding = "2.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.40", features = ["full"] }
rand = "0.9"
chrono = "0.4"
which = "7"
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints.clippy]
pedantic = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
